--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>Hello, world!</title>
+    <title>Score Calculator</title>
   </head>
   <body>
     <div class="container box">
       <center>
+          <h4>Cricket Score Calculator</h4>
         <hr />
         <div class="row">
           <div class="col">
