six and four buttons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <div class="score">
               <h2 type="number" id="run">0</h2>
             </div>
-            <hr />
             <button class="btncircle" onclick="rincrement()">+</button>
             <button class="btncircle" onclick="rdecrement()">-</button>
+            <button class="btncircle" id="six" onclick="rincrementsix()">+6</button>
+            <button class="btncircle" id="four" onclick="rincrementfour()">+4</button>
           </div>
           <hr class="my-3 middleline" />
 
@@ -38,7 +39,6 @@
             <button class="btncircle" onclick="wincrement()">+</button>
             <button class="btncircle" onclick="wdecrement()">-</button>
           </div>
-          <hr class="my-3 middleline" />
           <div class="col">
             <h3>Overs</h3>
             <div class="score1">
