--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <div class="score">
               <h2 type="number" id="wicket">0</h2>
             </div>
-            <hr />
             <button class="btncircle" onclick="wincrement()">+</button>
             <button class="btncircle" onclick="wdecrement()">-</button>
           </div>
+          <hr class="middleline my-3"/>
           <div class="col">
             <h3>Overs</h3>
             <div class="score1">
@@ -46,8 +46,7 @@
               <h2>.</h2>
               <h2 id="pointer">0</h2>
             </div>
-            <br />
-            <button class="btncircle" onclick="oincrement()">+</button>
+            <button class="btncircle my-2" onclick="oincrement()">+</button>
             <button class="btncircle" onclick="odecrement()">-</button>
           </div>
         </div>
